# ai-engineer

./: README.md
08-MLOps-confirmation/: .dockerignore  .env.dist  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  pytest.ini
08-MLOps-confirmation/src/: __init__.py
08-MLOps-confirmation/src/api/: __init__.py  main.py  predict.py
08-MLOps-confirmation/src/api/validation/: __init__.py
08-MLOps-confirmation/src/data/models/: __init__.py  drift_run.py  predict_logs.py
08-MLOps-confirmation/src/ml/: model.py  pipeline.py
08-MLOps-confirmation/src/scripts/: api_simulation.py  extract_single.py
08-MLOps-confirmation/src/scripts/profile/: predict.py
08-MLOps-confirmation/tests/api/: test_auth.py
p10/: Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
p10/src/: 1-preparation.ipynb  2-features.ipynb  3-clustering.ipynb  3-clustering_kmeans.ipynb  3-non-supervise.ipynb  3b-clustering_dbscan.ipynb  4-modelisation.ipynb  constants.py
p11/: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
p11/experiments/: experiments.json
p11/src/exercise-1/: notebook.ipynb
p11/src/exercise-1/.ipynb_checkpoints/: notebook-checkpoint.ipynb
p11/src/exercise-3/: 0-cartpole-dqn.ipynb  1-cartpole-dqn-sb3.ipynb  lib.py
p11/src/mission/: 0-mission.ipynb  1-mission-ppo.ipynb  mission.ipynb
p11/src/mission/api/: experiments.py  main.py  models.py
p11/src/mission/gui/: app.py
p12/: .gitignore  Dockerfile.streamlit  README.md  docker-compose.yaml  monitoring.md  pyproject.toml
p12/airflow/dags/: fakeddit_pipeline.py
p12/src/0-notebooks/.ipynb_checkpoints/: 2-extraction-checkpoint.ipynb
p12/src/2-transform/fakeddit/: pipeline_transform.py
p12/src/3-load/: load.py  main.py
p12/src/dashboard/: app.py
p12/src/extract/fakeddit/: download.py  extract.py  main.py
p12/src/models/: models.py
p12/src/notebooks/.ipynb_checkpoints/: 1-exploration-checkpoint.ipynb
p13/: .env.dist  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
p13/backend/: Dockerfile  pyproject.toml
p13/backend/src/agent/: __init__.py  graph.py  nodes.py  state.py
p13/backend/src/api/: agent.py  evaluate.py  main.py  moves.py  vector_search.py  videos.py
p13/frontend/: README.md  angular.json  package-lock.json
p13/frontend/src/: styles.css
p13/frontend/src/app/: app.component.css  app.component.html  app.component.ts
p13/frontend/src/styles/: chess-metal.css
p13/src/backend/api/: evaluate.py  main.py  moves.py  vector_search.py  videos.py
p13/src/backend/rag/: embeddings.py  main.py
p13/src/backend/service/: utils.py
p14/: .env.dist  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
p14/docker/train/: Dockerfile  requirements.txt
p14/docker/vllm/: start.sh
p14/src/api/: main.py  system_prompt.txt
p14/src/dataset/: main.py  metadata.py  normalize.py  validate.py
p14/src/export/: deploy_lora.py
p14/src/train/: dpo.py  sft.py  wandb_utils.py
p14/tests/api/: test_main_parser.py
p14/tests/dataset/: test_anonymize.py  test_main.py
p2/: .env.dist  .gitignore  Dockerfile  README.md  pyproject.toml
p2/src/: .env.dist  Exemple_Viz_segmentation_dataset.ipynb  Exemple_Viz_segmentation_dataset.ipynbZone.Identifier  huggingface_api_cloth_seg.ipynb  project2.ipynb
p2/src/lib/: __init__.py  display.py
p3/: docker-compose.yaml  pyproject.toml
p3/.ipynb_checkpoints/: exercise-checkpoint.ipynb  quiz2-checkpoint.ipynb
p3/course/: quiz2.ipynb
p3/mission/: 1_analyse-exploratoire.ipynb  2+3_feature-engineering.ipynb  2_feature-engineering.ipynb  4+5+6_models.ipynb  P3_template_modelistation_supervisee_data_scientist (1).ipynb
p3/mission/.ipynb_checkpoints/: 1_analyse-exploratoire-checkpoint.ipynb  2+3_feature-engineering-checkpoint.ipynb  2_feature-engineering-checkpoint.ipynb  4+5+6_models-checkpoint.ipynb
p3/mission/lib/: non_res_types.py
p4/: README.md  docker-compose.yaml  pyproject.toml
p4/.Trash-0/files/: sirh_unified.csv  tableau_comparatif_stylé.html
p4/.Trash-0/info/: a.txt.trashinfo  sirh_clean.csv.trashinfo  sirh_normalized.csv.trashinfo  sirh_unifie 1.csv.trashinfo  sirh_unifie 2.csv.trashinfo  sirh_unifie 3.csv.trashinfo  sirh_unifie.csv.trashinfo  sirh_unified 1.csv.trashinfo  sirh_unified.csv.trashinfo  tableau_comparatif_stylé.html.trashinfo
p4/src/: 1-analyse_exporatoire.ipynb  1-b-differenciation_salaries.ipynb  2-preparation_modelisation.ipynb  3-classification.ipynb  modelp4.pkl  sirh_clean.csv
p4/src/.ipynb_checkpoints/: 1-analyse_exporatoire-checkpoint.ipynb  1-b-differenciation_salaries-checkpoint.ipynb  2-preparation_modelisation-checkpoint.ipynb  3-classification-checkpoint.ipynb  pipeline-checkpoint.ipynb
p4/src/assets/: sirh_normalized.csv  sirh_unifie.csv
p4/src/lib/: __init__.py  modelisation.py  study.py
p6/: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
p6/.Trash-0/files/: lib 1.py  lib.py  test_artifact.ipynb
p6/.Trash-0/info/: feature_importances.csv.trashinfo  test_art.txt.trashinfo  untitled.py.trashinfo  untitled.txt.trashinfo
p6/src/: 1-analyse-et-preparation.ipynb  2-experimentation-lightgbm.ipynb  2-experimentations.ipynb  3-experimentation-xgboost.ipynb  4-experimentation-randomforest.ipynb  feature_importances.csv
p6/src/.ipynb_checkpoints/: 1-analyse-et-preparation-checkpoint.ipynb  2-experimentation-lightgbm-checkpoint.ipynb  2-experimentations-checkpoint.ipynb  3-experimentation-xgboost-checkpoint.ipynb  4-experimentation-randomforest-checkpoint.ipynb
p7/: .env  .env.dist  .gitignore  README.md  docker-compose.yaml  pyproject.toml
p7/.docker/api/: Dockerfile
p7/.github/workflows/: test.yml
p7/assets/: openagenda.csv
p7/demo/: chat.py
p7/prompts/: answer_events.txt
p7/src/api/: main.py
p7/src/data/: build.py  chunking.py
p7/src/service/: answer.py
p7/tests/api/: test_auth.py  test_rebuild.py
p7/tests/data/: test_build.py  test_chunking.py  test_faiss.py
p7/tests/service/: rag_evaluation_results.csv  test_evaluate_rag.py  testset.json
(+184 files in other folders)
