[tool.poetry]
name = "ai-engineer_p10"
version = "0.1.0"
description = "AI Engineer - Labellisez et appliquez des approches semi-supervisées en traitement d'images"
authors = ["Michaël Gonzalez <cyberalternative@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
jupyterlab = "^4.0.0"
pandas = "^2.3.2"
matplotlib = "^3.10.6"
seaborn = "^0.13.2"
scikit-learn = "^1.7.2"
mlflow = "^3.4.0"
