[tool.poetry]
name = "ai-engineer_p10"
version = "0.1.0"
description = "AI Engineer - Labellisez et appliquez des approches semi-supervisées en traitement d'images"
authors = ["Michaël Gonzalez <cyberalternative@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
jupyterlab = "^4.0.0"
pandas = "^2.3.2"
matplotlib = "^3.10.6"
seaborn = "^0.13.2"
scikit-learn = "^1.7.2"
gymnasium = "^1.2.3"
stable-baselines3 = "^2.7.1"
pygame = "^2.6.1"
imageio = "^2.37.2"
pillow = "^12.1.0"
