[tool.poetry]
name = "ai-engineer_p12"
version = "0.1.0"
description = "AI Engineer - Extrayez des données multimodales de sites web"
authors = ["Michaël Gonzalez <cyberalternative@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
jupyterlab = "^4.0.0"
pandas = "^2.3.2"
