[tool.poetry]
name = "ai-engineer_p14"
version = "0.1.0"
description = "AI Engineer - Finetunez votre propre LLM"
authors = ["Micha?l Gonzalez <cyberalternative@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
jupyterlab = "^4.0.0"
pandas = "^2.3.2"
matplotlib = "^3.10.6"
seaborn = "^0.13.2"
scikit-learn = "^1.7.2"
fastapi = "^0.135.1"
uvicorn = "^0.42.0"
httpx = "^0.28.1"
huggingface-hub = "^1.7.1"
pyarrow = "^23.0.1"
pytest = "^9.0.2"
presidio-analyzer = "^2.2.362"
presidio-anonymizer = "^2.2.362"
