[tool.poetry]
name = "ai-engineer_p3"
version = "0.1.0"
description = "AI Engineer - Anticipez les besoins en consommations de bâtiments"
authors = ["Michaël Gonzalez <cyberalternative@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
jupyterlab = "^4.0.0"
pandas = "^2.3.1"
scikit-learn = "^1.7.1"
palmerpenguins = "^0.1.4"
seaborn = "^0.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"