[tool.poetry]
name = "ai-engineer_p7"
version = "0.1.0"
description = "AI Engineer - Concevoir un système RAG"
authors = ["Michaël Gonzalez <cyberalternative@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.119.1"
uvicorn = "^0.38.0"
pytest = "^8.4.2"
pandas = "^2.3.3"
numpy = "^2.3.4"
faiss-cpu = {version = "^1.12.0", python = ">=3.13,<3.15"}
sentence-transformers = "^5.1.2"
langchain = "^1.0.2"
langchain-text-splitters = "^1.0.0"
